[CoordinatedGraphics][EFL] window.scrollTo(x, y) doesn't work when fixed layout is enabled https://bugs.webkit.org/show_bug.cgi?id=136917

Reviewed by Darin Adler.

Source/WebCore:

When fixed layout is enabled, scrollTo doesn't work on EFL port with coordinated graphics.
Since updateScrollbars() doesn't update scroll position when delegatesScrolling() is enabled.
To fix this issue, EFL port should update scroll position based on WK2 port. This patch
update scroll position in FrameView::requestScrollPositionUpdate() as Mac port.

TestWebKitAPI: Tools/TestWebKitAPI/Tests/WebKit2/efl/WKViewScrollTo

* page/FrameView.cpp:
(WebCore::FrameView::requestScrollPositionUpdate):

Tools:

Added WKViewScrollTo.cpp and scrollTo.html to test this issue.

* TestWebKitAPI/PlatformEfl.cmake:
* TestWebKitAPI/Tests/WebKit2/efl/WKViewScrollTo.cpp: Added.
(TestWebKitAPI::didFinishLoadForFrame):
(TestWebKitAPI::TEST):
* TestWebKitAPI/Tests/WebKit2/efl/scrollTo.html: Added.


Canonical link: https://commits.webkit.org/154781@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173785 268f45cc-cd09-0410-ab3c-d52691b4dbfc