Source/WebCore/page/scrolling/coordinatedgraphics/ScrollingCoordinatorCoordinatedGraphics.h
@@ -50,6 +50,8 @@ public:
     virtual void scrollableAreaScrollLayerDidChange(ScrollableArea*) override;
     virtual void willDestroyScrollableArea(ScrollableArea*) override;
 
+    virtual bool requestScrollPositionUpdate(FrameView*, const IntPoint&) override;
+
 private:
     OwnPtr<ScrollingStateTree> m_scrollingStateTree;
 };
